--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/react": "^16.2.0",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "disqus-react": "^1.1.5",
     "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
